# app/Http/Controllers/AddressController.php
@@ -40,6 +40,75 @@ class AddressController extends Controller
 
     /**
      * @OA\Post(
+     * path="/api/auth/address/view/{id}",
+     * summary="Посмотреть отедельный адресс",
+     * description="Посмотреть отедельный адресс",
+     * operationId="addressviewsingle",
+     * tags={"address"},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Апи Токен",
+     *    @OA\JsonContent(
+     *       required={"api_token, id"},
+     *       @OA\Property(property="api_token", type="string", format="string", example="R6efxg145osgPcJpb2LTXUXy1rcKezAAuPGYvdH5fFogUqT3xAGk06An6qCW"),
+     *       @OA\Property(property="id", type="string", format="string", example="1"),
+     *  ),
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="CallBack с адресами",
+     *        )
+     *     )
+     * )
+     */
+    public function singleview(Request $request)
+    {
+        $address = AddressUser::where('id', '=', $request->id)->first();
+        if ($address->userID != Auth::id()) {
+            return response(['message' => 'Доступ запрещен'], 403);
+        }
+        return response($address, 200);
+    }
+
+    /**
+     * @OA\Post(
+     * path="/api/auth/address/delete",
+     * summary="Удалить адресс",
+     * description="Удалить адресс",
+     * operationId="addressdelete",
+     * tags={"address"},
+     * @OA\RequestBody(
+     *    required=true,
+     *    description="Апи Токен",
+     *    @OA\JsonContent(
+     *       required={"api_token, id"},
+     *       @OA\Property(property="api_token", type="string", format="string", example="R6efxg145osgPcJpb2LTXUXy1rcKezAAuPGYvdH5fFogUqT3xAGk06An6qCW"),
+     *       @OA\Property(property="id", type="string", format="string", example="1"),
+     *  ),
+     * ),
+     * @OA\Response(
+     *    response=200,
+     *    description="CallBack с адресами",
+     *        )
+     *     )
+     * )
+     */
+    public function delete(Request $request)
+    {
+        $address = AddressUser::where('id', '=', $request->id)->first();
+        if ($address->userID != Auth::id()) {
+            return response(['message' => 'Доступ запрещен'], 403);
+        }
+        $delete = $address->delete();
+        if ($delete) {
+            return response(['message' => 'Адрес был успешно удален'], 200);
+        } else {
+            return response(['messagew' => 'Произошла ошибка'], 500);
+        }
+    }
+
+    /**
+     * @OA\Post(
      * path="/api/auth/address/add",
      * summary="Создать адресс",
      * description="Создать адресс",
